test/Fail/Issue3163.err
Issue3163.agda:11.8-9: error: [NotInScope]
Not in scope:
  A at Issue3163.agda:11.8-9
when scope checking A
